Smb4K SVN_HEAD (????-??-??):
- KDE SC 4.4.0 and Qt 4.7.0 or later are required.
- We now use Utf8 throughout the whole application (closes #14674 and
  #17535).
- Unified the function names of the core classes that set and return the
  workgroup name, host name, and share name.
- Made the core container classes use QUrls internally where appropriate.
- Revised Smb4KSettings class:
  + Removed the program entries from this class. Each core class that needs
    an external program searches for itself.
  + Added entries for handling notifications.
  + Removed all entries related to the old mounting/unmounting implementation.
- Revised Smb4KAuthInfo class:
  + Removed old constructor.
  + Added two new constructors.
  + Added type enumeration and function.
  + Added setUNC() and unc() functions.
  + Renamed user() and setUser() functions login() and setLogin().
  + Removed the setHomesUser() function. Use setLogin() instead.
  + Removed setHomesUsers() and homesUsers() functions.
  + setShare() now automatically uses Smb4KShare::homeUNC() to set the UNC,
    if you pass a homes share.
  + Added equals() function.
  + Added "==" operator.
  + Added setIP() and ip() functions.
  + Renamed setDefaultAuthInfo() to useDefaultAuthInfo().
- Revised Smb4KWalletManager:
  + Fixed several bugs.
  + The IP address is now also saved to the wallet.
  + Also return correct authentication information if only the IP address is
    given (hosts only).
- Introduced Smb4KBasicNetworkItem class. Smb4KWorkgroup, Smb4KHost and 
  Smb4KShare inherit this class now.
- Revised Smb4KWorkgroup class:
  + Added equals() function.
  + Added hasMasterBrowserIP() function.
  + Added "==" operator.
  + Remove setMasterBrowser() convenience function.
- Revised Smb4KHost class:
  + Added setAuthInfo() function. You can set the user info of the UNC/URL with
    it.
  + Added setURL() and url() functions.
  + Added unc() function.